--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -4,8 +4,8 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write
-#      contents: read
+#      pull-requests: write
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - run: gh pr comment "${GITHUB_HEAD_REF}" --body "Hello, ${GITHUB_ACTOR}"
